--- a/tecla-connect/src/app/componentes/registro/registro.component.html
+++ b/tecla-connect/src/app/componentes/registro/registro.component.html
@@ -2,10 +2,13 @@
     <mat-card-content>
         <mat-card-header>
             <mat-card-title>
-                <mat-icon >assignment</mat-icon>Registrar Usuario
+                Registrar Usuario
             </mat-card-title>
         </mat-card-header>
         <form [formGroup]="form">
+            <mat-card-title>
+                <mat-icon>info</mat-icon>Datos generales
+            </mat-card-title>
             <mat-grid-list cols="4" rowHeight="3:1">
                 <mat-grid-tile>
                     <mat-form-field appearance="outline">
@@ -61,18 +64,23 @@
                         <input matInput placeholder="" type="text" formControlName="hobbies">
                     </mat-form-field>
                 </mat-grid-tile>
-                <mat-grid-tile>
+                <!-- <mat-grid-tile>
                     <mat-form-field appearance="outline">
                         <mat-label>Conocimientos Extras</mat-label>
                         <input matInput placeholder="" type="text" formControlName="conocimientos">
                     </mat-form-field>
+                </mat-grid-tile> -->
+                <mat-grid-tile>
+                    <input style="display: none" formControlName="imagen" type="file" (change)="onFileChanged($event)"
+                        #fileInput accept="image/png, .jpeg, .jpg, image/gif">
+                    <button mat-raised-button color="accent" (click)="fileInput.click()">Subir foto de perfil</button>
                 </mat-grid-tile>
             </mat-grid-list>
         </form>
     </mat-card-content>
     <mat-card-actions class="btn-dos">
         <button mat-raised-button color="warn" routerLink="/login">Cancelar</button>
-        <button mat-raised-button color="primary" class="savedate" (click)="save()">
+        <button mat-raised-button color="accent" class="savedate" (click)="save()">
             <mat-icon>save</mat-icon>&nbsp;Registrarse
         </button>
     </mat-card-actions>
