--- a/tecla-connect/src/app/componentes/registro/registro.component.css
+++ b/tecla-connect/src/app/componentes/registro/registro.component.css
@@ -3,3 +3,10 @@
     display: grid;
     padding-left: 40%;
 }
+.demo-table {
+    width: 100%;
+  }
+  .demo-button-container {
+    padding-bottom: 16px;
+  }
+  
