--- a/tecla-connect/src/app/componentes/registro/estudios/estudios.component.html
+++ b/tecla-connect/src/app/componentes/registro/estudios/estudios.component.html
@@ -7,7 +7,7 @@
       <mat-grid-list cols="1" rowHeight="2:1">
         <mat-grid-tile>
           <div class="demo-button-container">
-            <button mat-raised-button (click)="addData()" color="accent" class="demo-button">
+            <button mat-raised-button (click)="addEstudio()" color="accent" class="demo-button">
               Agregar Estudio
             </button>
           </div>
@@ -66,7 +66,7 @@
       <mat-grid-list cols="1" rowHeight="2:1">
         <mat-grid-tile>
           <div class="demo-button-container">
-            <button mat-raised-button (click)="addData()" color="accent" class="demo-button">
+            <button mat-raised-button (click)="addIdioma()" color="accent" class="demo-button">
               Agregar Idioma
             </button>
           </div>
